--- a/wiki/TrueCrypt.wiki
+++ b/wiki/TrueCrypt.wiki
@@ -11,7 +11,7 @@ Now TrueCrypt is masked in the official tree due to legal problems.
 app-crypt/truecrypt
 }}}
 
-This page will show you the steps to install TrueCrypt from [http://code.google.com/p/yarik-overlay yarik-overlay]. 
+This page will show you the steps to install TrueCrypt from [yarik_overlay yarik-overlay]. 
 
 == About TrueCrypt ==
 
