--- a/overlay/app-crypt/truecrypt/ChangeLog
+++ b/overlay/app-crypt/truecrypt/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 May 2009; Yarik <ygorbunov@gmail.com> +truecrypt-6.2.ebuild:
+  Version bump.
+
   01 Dec 2008; Yarik <ygorbunov@gmail.com> +truecrypt-6.1a.ebuild:
   Version bump.
 
