--- a/trunk/overlay/app-crypt/truecrypt/ChangeLog
+++ b/trunk/overlay/app-crypt/truecrypt/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Oct 2009; Yarik <ygorbunov@gmail.com> +truecrypt-6.3.ebuild:
+  Version bump.
+
   22 Jun 2009; Yarik <ygorbunov@gmail.com> +truecrypt-6.2a.ebuild:
   Version bump.
 
