--- a/overlay/app-crypt/truecrypt/ChangeLog
+++ b/overlay/app-crypt/truecrypt/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Dec 2009; Yarik <ygorbunov@gmail.com> +truecrypt-6.3a.ebuild:
+  Version bump.
+
   23 Oct 2009; Yarik <ygorbunov@gmail.com> +truecrypt-6.3.ebuild:
   Version bump.
 
