--- a/trunk/overlay/media-video/mediainfo/ChangeLog
+++ b/trunk/overlay/media-video/mediainfo/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-  01 Dec 2008; Yarik <ygorbunov@gmail.com> +mediainfo-0.7.26.ebuild,ChangeLog:
+  02 Dec 2009; Yarik <ygorbunov@gmail.com> mediainfo-0.7.26.ebuild:
+  Deprecated use flag wxwindows changed to wxwidgets.
+
+  01 Dec 2009; Yarik <ygorbunov@gmail.com> +mediainfo-0.7.26.ebuild,ChangeLog:
   New ebuild for #255179.
 
