--- a/trunk/overlay/app-office/openerp-web/ChangeLog
+++ b/trunk/overlay/app-office/openerp-web/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  2 Dec 2009; Yarik <ygorbunov@gmail.com> openerp-web-5.0.6.ebuild:
+  update deps
+
   29 Sep 2009; Yarik <ygorbunov@gmail.com>
   +ChangeLog, openerp-web-5.0.6.ebuild:
   New ebuild for bug #267886.
