--- a/overlay/www-client/arora/ChangeLog
+++ b/overlay/www-client/arora/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Dec 2009; Yarik <ygorbunov@gmail.com> +arora-0.10.2.ebuild:
+  version bump. Depends on QT 4.5
+
 *arora-0.10.0 (02 Oct 2009)
 
   02 Oct 2009; Yarik <ygorbunov@gmail.com> +arora-0.10.0.ebuild:
