--- a/trunk/overlay/media-video/mediainfo/ChangeLog
+++ b/trunk/overlay/media-video/mediainfo/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Feb 2010; Yarik <ygorbunov@gmail.com> +mediainfo-0.7.27.ebuild:
+  Version bump.
+
   02 Dec 2009; Yarik <ygorbunov@gmail.com> mediainfo-0.7.26.ebuild:
   Deprecated use flag wxwindows changed to wxwidgets.
 
