--- a/trunk/overlay/www-client/arora/ChangeLog
+++ b/trunk/overlay/www-client/arora/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/arora
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Feb 2010; Yarik <ygorbunov@gmail.com> +arora-0.10.2-r1.ebuild:
+  version bump. In this ebuild arora depends on QT 4.5, but some features work only with QT 4.6
+
 
   02 Dec 2009; Yarik <ygorbunov@gmail.com> +arora-0.10.2.ebuild:
   version bump. Depends on QT 4.5
