--- a/overlay/app-office/openerp-web/ChangeLog
+++ b/overlay/app-office/openerp-web/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/openerp-web
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  1 Mar 2010; Yarik <ygorbunov@gmail.com> +openerp-web-5.0.7.ebuild:
+  version bump
 
   2 Dec 2009; Yarik <ygorbunov@gmail.com> openerp-web-5.0.6.ebuild:
   update deps
