--- a/overlay/media-video/mediainfo/ChangeLog
+++ b/overlay/media-video/mediainfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/mediainfo
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  29 Mar 2010; Yarik <ygorbunov@gmail.com> +mediainfo-0.7.29.ebuild:
+  Version bump.
 
   01 Feb 2010; Yarik <ygorbunov@gmail.com> +mediainfo-0.7.27.ebuild:
   Version bump.
