--- a/overlay/app-office/openerp-server/ChangeLog
+++ b/overlay/app-office/openerp-server/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Aug 2010; Yarik <ygorbunov@gmail.com> openerp-server-5.0.7.ebuild:
+  -DEPEND="virtual/postgresql-base
+  +DEPEND="dev-db/postgresql-base
+
   1 Mar 2010; Yarik <ygorbunov@gmail.com> +openerp-server-5.0.7.ebuild:
   version bump
 
