--- a/overlay/app-office/openerp-client/ChangeLog
+++ b/overlay/app-office/openerp-client/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Sep 2010; Yarik <ygorbunov@gmail.com> +openerp-client-5.0.14.ebuild:
+  version bump
+
+
   1 Mar 2010; Yarik <ygorbunov@gmail.com> +openerp-client-5.0.7.ebuild:
   version bump
 
