--- a/overlay/app-office/openerp-web/ChangeLog
+++ b/overlay/app-office/openerp-web/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Sep 2010; Yarik <ygorbunov@gmail.com> +openerp-web-5.0.14.ebuild:
+  version bump
+
   1 Mar 2010; Yarik <ygorbunov@gmail.com> +openerp-web-5.0.7.ebuild:
   version bump
 
