--- a/overlay/media-libs/libmediainfo/ChangeLog
+++ b/overlay/media-libs/libmediainfo/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Jan 2011; Yarik <ygorbunov@gmail.com> +libmediainfo-0.7.41.ebuild:
+  Version bump.
+
   20 Sep 2010; Yarik <ygorbunov@gmail.com> +libmediainfo-0.7.35.ebuild:
   Version bump.
 
