--- a/overlay/media-video/mediainfo/ChangeLog
+++ b/overlay/media-video/mediainfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/mediainfo
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2011; Yarik <ygorbunov@gmail.com> +mediainfo-0.7.41.ebuild:
+  Version bump.
 
   29 Mar 2010; Yarik <ygorbunov@gmail.com> +mediainfo-0.7.29.ebuild:
   Version bump. Old versions are removed.
