--- a/overlay/app-crypt/truecrypt/ChangeLog
+++ b/overlay/app-crypt/truecrypt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/truecrypt
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  26 Jan 2011; Yarik <ygorbunov@gmail.com> +truecrypt-7.0a-r1.ebuild:
+  Ebuild improvement
 
   26 Sep 2010; Yarik <ygorbunov@gmail.com>
   Old versions are removed
