--- a/overlay/app-office/openerp-web/ChangeLog
+++ b/overlay/app-office/openerp-web/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/openerp-web
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  26 Jan 2011; Yarik <ygorbunov@gmail.com> +openerp-web-5.0.15.ebuild:
+  version bump
 
   26 Sep 2010; Yarik <ygorbunov@gmail.com> +openerp-web-5.0.14.ebuild:
   version bump
