--- a/overlay/dev-util/kdevelop/ChangeLog
+++ b/overlay/dev-util/kdevelop/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/kdevelop
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+	01 Mar 2011; Yarik <ygorbunov@gmail.com> +kdevelop-3.5.5-gcc4.5.patch:
+        Apply patch for gcc-4.5 compatibility. Some improvement from kde-sunset overlay
+
 
 	01 Apr 2010; Yarik <ygorbunov@gmail.com> +kdevelop-3.5.5.ebuild, +kdevelop-3.5.5-libtool.patch:
 	New ebuild for kdevelop-3.5.5
