--- a/trunk/overlay/app-office/openerp-web/ChangeLog
+++ b/trunk/overlay/app-office/openerp-web/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Mar 2011; Yarik <ygorbunov@gmail.com> openerp-web-5.0.15.ebuild:
+  Depend on =dev-python/cherrypy-3.1*
+
   26 Jan 2011; Yarik <ygorbunov@gmail.com> +openerp-web-5.0.15.ebuild:
   version bump
 
