--- a/trunk/overlay/app-office/openerp-server/ChangeLog
+++ b/trunk/overlay/app-office/openerp-server/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Mar 2011; Yarik <ygorbunov@gmail.com> +openerp-server-6.0.1.ebuild:
+  version bump
+
   04 Mar 2011; Yarik <ygorbunov@gmail.com> openerp-server-5.0.15.ebuild:
   Bug #351927 is fixed 
 
