--- a/trunk/overlay/media-libs/libmediainfo/ChangeLog
+++ b/trunk/overlay/media-libs/libmediainfo/ChangeLog
@@ -1,6 +1,9 @@
-# ChangeLog for media-video/mediainfo
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# ChangeLog for media-lib/libmediainfo
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  26 Mar 2011; Yarik <ygorbunov@gmail.com> +libmediainfo-0.7.43.ebuild:
+  Version bump.
 
   25 Jan 2011; Yarik <ygorbunov@gmail.com> +libmediainfo-0.7.41.ebuild:
   Version bump.
