--- a/overlay/media-video/mediainfo/ChangeLog
+++ b/overlay/media-video/mediainfo/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Mar 2011; Yarik <ygorbunov@gmail.com> +mediainfo-0.7.43.ebuild:
+  Version bump.
+
   25 Jan 2011; Yarik <ygorbunov@gmail.com> +mediainfo-0.7.41.ebuild:
   Version bump.
 
