--- a/overlay/app-office/openerp-server/ChangeLog
+++ b/overlay/app-office/openerp-server/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+
+  26 Mar 2011; Yarik <ygorbunov@gmail.com> +openerp-server-5.0.16.ebuild:
+  version bump
+
   06 Mar 2011; Yarik <ygorbunov@gmail.com> +openerp-server-6.0.1.ebuild:
   version bump
 
