--- a/trunk/overlay/dev-util/kdevelop/ChangeLog
+++ b/trunk/overlay/dev-util/kdevelop/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+	10 Apr 2011; Yarik <ygorbunov@gmail.com> kdevelop-3.5.5.ebuild:
+	Remove monolithic deps
+
 	01 Mar 2011; Yarik <ygorbunov@gmail.com> +kdevelop-3.5.5-gcc4.5.patch:
         Apply patch for gcc-4.5 compatibility. Some improvement from kde-sunset overlay
 
