--- a/trunk/overlay/app-office/openerp-web/ChangeLog
+++ b/trunk/overlay/app-office/openerp-web/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Apr 2011; Yarik <ygorbunov@gmail.com> +openerp-web-6.0.2.ebuild:
+  version bump
+
   26 Mar 2011; Yarik <ygorbunov@gmail.com> +openerp-web-5.0.16.ebuild:
   version bump
 
