--- a/overlay/app-office/openerp-server/ChangeLog
+++ b/overlay/app-office/openerp-server/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Apr 2011; Yarik <ygorbunov@gmail.com> :
+  Use Python 2, EAPI 3
+
   10 Apr 2011; Yarik <ygorbunov@gmail.com> +openerp-server-6.0.2.ebuild:
   version bump
 
