--- a/overlay/app-crypt/truecrypt/ChangeLog
+++ b/overlay/app-crypt/truecrypt/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Jul 2011; Yarik <ygorbunov@gmail.com> +truecrypt-7.0a-r5.ebuild:
+  Equal to official ebuild
+
   26 Jan 2011; Yarik <ygorbunov@gmail.com> +truecrypt-7.0a-r1.ebuild:
   Ebuild improvement
 
