--- a/trunk/overlay/app-crypt/truecrypt/ChangeLog
+++ b/trunk/overlay/app-crypt/truecrypt/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Oct 2011; Yarik <ygorbunov@gmail.com> +truecrypt-7.1.ebuild:
+  Version bump. Include our own headers by default. Removed dependency on a
+  pkcs11 implementation.
+
   13 Jul 2011; Yarik <ygorbunov@gmail.com> +truecrypt-7.0a-r5.ebuild:
   Equal to official ebuild
 
