--- a/overlay/media-libs/libmediainfo/ChangeLog
+++ b/overlay/media-libs/libmediainfo/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Oct 2011; Yarik <ygorbunov@gmail.com> +libmediainfo-0.7.50.ebuild:
+  Version bump.
+
   26 Mar 2011; Yarik <ygorbunov@gmail.com> +libmediainfo-0.7.43.ebuild:
   Version bump.
 
