--- a/trunk/overlay/app-office/openerp-client/ChangeLog
+++ b/trunk/overlay/app-office/openerp-client/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Oct 2011; Yarik <ygorbunov@gmail.com> openerp-client-6.0.3.ebuild
+  Removed dependency on dev-python/pyxml. Added dependency on dev-python/lxml and x11-libs/gdk-pixbuf[jpeg].
+
   09 Oct 2011; Yarik <ygorbunov@gmail.com> +openerp-client-6.0.3.ebuild:
   version bump
 
