--- a/trunk/overlay/app-office/openerp-web/ChangeLog
+++ b/trunk/overlay/app-office/openerp-web/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Oct 2011; Yarik <ygorbunov@gmail.com>
+  Old versions are removed
+
   09 Oct 2011; Yarik <ygorbunov@gmail.com> +openerp-web-6.0.3.ebuild:
   version bump
 
