--- a/overlay/app-office/openerp-server/ChangeLog
+++ b/overlay/app-office/openerp-server/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Oct 2011; Yarik <ygorbunov@gmail.com> openerp-server-6.0.3.ebuild:
+  Setting permissions on web_livechat dir.
+
   16 Oct 2011; Yarik <ygorbunov@gmail.com>
   Old versions are removed 
 
