--- a/overlay/app-crypt/truecrypt/ChangeLog
+++ b/overlay/app-crypt/truecrypt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/truecrypt
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Feb 2012; Yarik <ygorbunov@gmail.com> +truecrypt-7.1a.ebuild:
+  Version bump.
 
   08 Oct 2011; Yarik <ygorbunov@gmail.com> +truecrypt-7.1.ebuild:
   Version bump. Include our own headers by default. Removed dependency on a
