--- a/trunk/overlay/app-office/openerp-server/ChangeLog
+++ b/trunk/overlay/app-office/openerp-server/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Jun 2012; Yarik <ygorbunov@gmail.com> +openerp-server-6.0.4-r1.ebuild:
+  openerp-server init.d script fixed.
+
   19 Jun 2012; Yarik <ygorbunov@gmail.com> +openerp-server-6.0.4.ebuild:
   version bump
 
