Latest openerp-6.1.1 night build, fixed dependency problem

--- a/overlay/app-office/openerp/ChangeLog
+++ b/overlay/app-office/openerp/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  1 Dec 2012; Yarik <ygorbunov@gmail.com> +openerp-6.1.1_p20121130.ebuild:
+  Latest nightbuild, fixed dependency problem
+
   9 Jul 2012; Yarik <ygorbunov@gmail.com> +openerp-6.1.1_p20120617-r3.ebuild:
   Openerp depends on dev-python/vatnumber
 
