Build with USE="sdl" is fixed
(Portage version: 2.2.14/svn/Linux x86_64, RepoMan options: --force, unsigned Manifest commit)

--- a/overlay/games-strategy/freeciv/ChangeLog
+++ b/overlay/games-strategy/freeciv/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Feb 2015; Yaroslav Gorbunov <ygorbunov@gmail.com>
+  freeciv-2.5.0_beta2.ebuild:
+  Build with USE="sdl" is fixed
+
 *freeciv-2.5.0_beta2 (11 Jan 2015)
 
   11 Jan 2015; Yaroslav Gorbunov <ygorbunov@gmail.com> +freeciv-2.5.0_beta2.ebuild, metadata.xml:
